--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,9 @@ jobs:
           architecture: x64
 
       - name: Install requirements
-        run: python3 -m pip install -r requirements.txt
+        run: |
+          python3 -m pip install -U pip
+          python3 -m pip install -r requirements.txt
 
       - name: Deploy 🚀
         run: python3 -m mkdocs gh-deploy --force
