--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,18 @@
-site_name: CODAQUI (Docs)
+site_name: CODAQUI.dev
 site_url: https://docs.codaqui.dev/
+site_description: "Queremos democratizar o aprendizado tecnológico, e aproximar novas gerações do conteúdo tecnico."
+copyright: Codaqui ® Todos os direitos reservados.
+
 nav:
-    - Home: index.md
-    - About: about.md
-theme: readthedocs
+    - Inicio: index.md
+    - Sobre: about.md
+    - Quero: #
+      - Estudar: quero/estudar.md
+      - Apoiar: quero/apoiar.md
+      - Patrocinar: quero/patrocinar.md
+    - Contato: contact.md
+theme:
+  name: material
+  custom_dir: overrides
+  language: pt
+  logo: assets/logo_blk.png
