--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ site_url: https://codaqui.dev/
 site_description: "Queremos democratizar o aprendizado tecnológico, e aproximar novas gerações do conteúdo tecnico."
 copyright: Codaqui &copy; Copyright - 2022 - Todos os direitos reservados - CNPJ 44.593.429/0001-05
 repo_url: https://github.com/codaqui
+edit_uri: 'https://github.com/codaqui/institucional/tree/main/docs'
 
 nav:
     - Inicio: index.md
