--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,9 @@ theme:
   logo: assets/logo_blk.png
   palette:
     primary: black
+  markdown_extensions:
+    - attr_list
+    - md_in_html
 
 plugins:
   - search
