--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,7 +18,7 @@ nav:
       - Apoiar: quero/apoiar.md
       - Patrocinar: quero/patrocinar.md
     - Trilhas: #
-      - Python: trilhas/python.md#
+      - Python: trilhas/python.md
     - Associação: ong.md
     - Blog: blog.md
     - Contato: contact.md
