--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,6 +36,9 @@ theme:
 markdown_extensions:
   - attr_list
   - md_in_html
+  - def_list
+  - pymdownx.tasklist:
+      custom_checkbox: true
 
 plugins:
   - search
