--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,7 +19,7 @@ nav:
       - GitHub Start: trilhas/github-starter.md
       - Python: trilhas/python.md
     - Associação: ong.md
-    - Blog: blog.md
+    - Social: social.md
     - Contato: contact.md
     - Código de Conduta: conduta.md
 
