--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,3 +50,5 @@ extra:
       link: https://www.linkedin.com/company/codaqui
     - icon: fontawesome/brands/instagram
       link: https://instagram.com/codaqui.dev
+    - icon: fontawesome/brands/youtube
+      link: https://www.youtube.com/channel/UCUySP8FaPF_IkM48zmwJr0A
