--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,7 +19,7 @@ nav:
       - Python: trilhas/python.md
       - Javascript: trilhas/javascript.md
     - Associação: ong.md
-    - Social: social.md
+    - Social: blog.md
     - Contato: contact.md
     - Código de Conduta: conduta.md
 
