--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,8 @@ jobs:
         run: |
           python3 -m pip install -U pip
           python3 -m pip install -r requirements.txt
+          python3 -m pip install git+https://${GH_TOKEN}@github.com/squidfunk/mkdocs-material-insiders.git
+
 
       - name: Deploy 🚀
         run: python3 -m mkdocs gh-deploy --force
