--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           python3 -m pip install -U pip
           python3 -m pip install -r requirements.txt
-          git clone git@github.com:squidfunk/mkdocs-material-insiders.git mkdocs-material
+          git clone pip install https://${GH_TOKEN_MKDOCS}@github.com/squidfunk/mkdocs-material-insiders.git mkdocs-material
           pip install -e mkdocs-material
 
       - name: Deploy 🚀
