--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,20 +12,25 @@ jobs:
         python-version: [ 3.8 ]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      
+      - uses: actions/checkout@v3
+        with:
+          repository: squidfunk/mkdocs-material-insiders
+          token: ${{ secrets.GH_TOKEN_MKDOCS }}
+          path: mkdocs-material
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-          architecture: x64
+          architecture: x64 
 
       - name: Install requirements
         run: |
           python3 -m pip install -U pip
-          python3 -m pip install -r requirements.txt
-          git clone https://${GH_TOKEN_MKDOCS}@github.com/squidfunk/mkdocs-material-insiders.git mkdocs-material
-          pip install -e mkdocs-material
+          python3 -m pip install -r requirements.txt]
+          python3 -m pip install -e mkdocs-material
 
       - name: Deploy 🚀
         run: python3 -m mkdocs gh-deploy --force
