--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,11 +13,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      
-      - uses: actions/checkout@v3
-        with:
-          repository: squidfunk/mkdocs-material-insiders
-          path: mkdocs-material
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
@@ -29,7 +24,8 @@ jobs:
         run: |
           python3 -m pip install -U pip
           python3 -m pip install -r requirements.txt]
-          python3 -m pip install -e mkdocs-material
+          python3 -m pip install git+https://${GH_TOKEN_MKDOCS}@github.com/squidfunk/mkdocs-material-insiders.git
+
 
       - name: Deploy 🚀
         run: python3 -m mkdocs gh-deploy --force
