--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,8 @@ jobs:
 
       - name: Install requirements
         run: |
-          ls
           python3 -m pip install -U pip
-          python3 -m pip install -r requirements.txt]
+          python3 -m pip install -r requirements.txt
           python3 -m pip install git+https://${GH_TOKEN_MKDOCS}@github.com/squidfunk/mkdocs-material-insiders.git
 
 
