--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,20 +8,21 @@ edit_uri: 'https://github.com/codaqui/institucional/tree/main/docs'
 
 nav:
     - Inicio: index.md
-    - Sobre: about.md
-    - Projetos: projetos.md
-    - Pais e Responsáveis: pais_responsaveis.md
-    - Quero: #
-      - Estudar: quero/estudar.md
-      - Apoiar: quero/apoiar.md
+    - Sobre:
+      - Sobre: about.md
+      - Associação: ong.md
+      - Código de Conduta: conduta.md
+      - Pais e Responsáveis: pais_responsaveis.md
+      - Projetos: projetos.md
+    - Participe: #
+      - "#QueroEstudar": quero/estudar.md
+      - "#QueroApoiar": quero/apoiar.md
     - Trilhas: #
       - GitHub Start: trilhas/github-starter.md
       - Python: trilhas/python.md
       - Javascript: trilhas/javascript.md
-    - Associação: ong.md
-    - Social: blog.md
+    - Blog: blog/index.md
     - Contato: contact.md
-    - Código de Conduta: conduta.md
 
 theme:
   name: material
@@ -31,6 +32,8 @@ theme:
   palette:
     primary: black
   favicon: assets/favicon.png
+  features:
+    - navigation.tabs
     
 markdown_extensions:
   - attr_list
@@ -45,6 +48,21 @@ markdown_extensions:
 
 plugins:
   - search
+  - meta
+  - tags
+  - social
+  - blog:
+      post_url_date_format: YYYY/MM/dd
+      post_slugify: !!python/name:pymdownx.slugs.uslugify
+      archive_name: Arquivo
+      categories_name: Categorias
+  - rss:
+      match_path: blog/posts/.* 
+      date_from_meta:
+        as_creation: date
+      categories:
+        - categories
+        - tags
 
 extra:
   social:
@@ -58,3 +76,9 @@ extra:
       link: https://instagram.com/codaqui.dev
     - icon: fontawesome/brands/youtube
       link: https://www.youtube.com/channel/UCUySP8FaPF_IkM48zmwJr0A
+  consent:
+    title: LGPD Cookies
+    description: >- 
+      Usamos cookies para reconhecer suas visitas e preferências repetidas, bem como
+      para medir a eficácia de nossa documentação e se os usuários encontrarem o que eles estão procurando. Com o seu consentimento, você está nos ajudando a
+      tornar nossa documentação melhor.
