melhorar nome do arquivo

--- a/.github/ISSUE_TEMPLATE/certificado-exercicio.yml
+++ b/.github/ISSUE_TEMPLATE/certificado-exercicio.yml
@@ -1,4 +1,4 @@
-name: "[CERTIFICADO] - Solicitação de Exercicio"
+name: "[CERTIFICADO] Exercício"
 description: Desejo criar uma solicitação sobre um certificado existente.
 body:
   
