feat: novos ajustes e testando campos

--- a/.github/ISSUE_TEMPLATE/certificado-exercicio.yml
+++ b/.github/ISSUE_TEMPLATE/certificado-exercicio.yml
@@ -1,5 +1,7 @@
 name: "[CERTIFICADO] Exercício"
 description: Desejo criar uma solicitação sobre um certificado existente.
+assignees:
+  - endersonmenezes
 body:
   
   - type: checkboxes
