--- a/.github/ISSUE_TEMPLATE/certificado-exercicio.yml
+++ b/.github/ISSUE_TEMPLATE/certificado-exercicio.yml
@@ -1,4 +1,5 @@
 name: "[CERTIFICADO] Exercício"
+title: "[CERTIFICADO] [EXERCíCIO]: "
 description: Desejo criar uma solicitação sobre um certificado existente.
 assignees:
   - endersonmenezes
