--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -29,3 +29,7 @@ contact_links:
   - name: "[TRILHA] Discussões"
     url: https://github.com/codaqui/institucional/discussions/categories/trilhas-de-ensino
     about: "Inicie a proposta de uma nova trilha, ou uma discussão sobre uma existente."
+
+  - name: "[CODAQUI] Outros"
+    url: https://github.com/codaqui/institucional/discussions/categories/geral
+    about: "Inicie uma discussão sobre um assunto não citado nessa página."
