--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -31,6 +31,6 @@ contact_links:
     url: https://github.com/codaqui/institucional/discussions/categories/trilhas-de-ensino
     about: "Inicie a proposta de uma nova trilha, ou uma discussão sobre uma existente."
 
-  - name: "[CODAQUI] Outros"
+  - name: "[DISCUSSÕES] Outros"
     url: https://github.com/codaqui/institucional/discussions/categories/geral
     about: "Inicie uma discussão sobre um assunto não citado nessa página."
