feat: add thai as author

--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -2,3 +2,8 @@ endersonmenezes:
   name: Enderson Menezes
   description: Founder
   avatar: https://avatars.githubusercontent.com/u/11020807?v=4
+
+thaifurforo:
+  name: Thainara Furforo
+  description: Volunteer
+  avatar: https://avatars.githubusercontent.com/u/92865769?v=4
