post update and core mkdocs update

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,9 +42,11 @@ theme:
     - navigation.indexes
     - navigation.top
     - content.code.annotate
+    - content.tabs.link
     # - announce.dismiss
     
 markdown_extensions:
+  - admonition
   - attr_list
   - md_in_html
   - def_list
@@ -58,6 +60,9 @@ markdown_extensions:
   - pymdownx.inlinehilite
   - pymdownx.snippets
   - pymdownx.superfences
+  - pymdownx.details
+  - pymdownx.tabbed:
+      alternate_style: true 
 
 
 plugins:
@@ -69,7 +74,9 @@ plugins:
   # - git-authors
   - blog:
       post_url_date_format: YYYY/MM/dd
-      post_slugify: !!python/name:pymdownx.slugs.uslugify
+      post_slugify: !!python/object/apply:pymdownx.slugs.slugify
+        kwds:
+          case: lower
       archive_name: Arquivo
       categories_name: Categorias
   - rss:
