--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ mkdocs
 mkdocs-rss-plugin
 mkdocs-git-authors-plugin
 mkdocs-git-committers-plugin-2
+mkdocs-git-revision-date-localized-plugin
 pillow
 cairosvg
