feat: adicionando a trilha de css no menu

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
       - Python: trilhas/python.md
       - Javascript: trilhas/javascript.md
       - GitHub Start: trilhas/github-starter.md
+      - CSS3: trilhas/css3.md
     - Blog:
       - blog/index.md
     - Contato: contact.md
