--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -107,7 +107,7 @@ extra:
     - icon: fontawesome/brands/instagram
       link: https://instagram.com/codaqui.dev
     - icon: fontawesome/brands/youtube
-      link: https://www.youtube.com/channel/UCUySP8FaPF_IkM48zmwJr0A
+      link: https://youtube.com/@codaqui
   consent:
     title: LGPD Cookies
     description: >- 
