update and create new post

--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -7,3 +7,8 @@ thaifurforo:
   name: Thainara Furforo
   description: Volunteer
   avatar: https://avatars.githubusercontent.com/u/92865769?v=4
+
+anaelisalace:
+  name: Ana Elisa
+  description: Volunteer
+  avatar: https://avatars.githubusercontent.com/u/92278335?v=4
