typo: feedback correction

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -147,4 +147,4 @@ extra:
           data: 0
           note: >- 
             Obrigado pelo seu feedback! Nos ajude a melhorar essa página,
-            relate o que gostaria que fosse melhorado em <a href="https://github.com/codaqui/institucional/discussions" target="_blank" rel="noopener">nosso ambiente de discussão!</a>.
+            relate o que gostaria que fosse melhorado em <a href="https://github.com/codaqui/institucional/discussions" target="_blank" rel="noopener">nosso ambiente de discussão!</a>
