--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -14,6 +14,6 @@ anaelisalace:
   avatar: https://avatars.githubusercontent.com/u/92278335?v=4
   
 artumosgoc:
-  name: Ana Elisa
+  name: Elias Miranda
   description: Volunteer
   avatar: https://avatars.githubusercontent.com/u/63540372
