add Elias Miranda

--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -12,3 +12,8 @@ anaelisalace:
   name: Ana Elisa
   description: Volunteer
   avatar: https://avatars.githubusercontent.com/u/92278335?v=4
+
+artumosgoc:
+  name: Elias Miranda
+  description: Student
+  avatar: https://avatars.githubusercontent.com/u/63540372
