ci: update python version and mkdocs material clon

--- a/.github/workflows/deploy-develop.yml
+++ b/.github/workflows/deploy-develop.yml
@@ -9,17 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ 3.8 ]
+        python-version: [ 3.11 ]
 
     steps:
       - uses: actions/checkout@v2
-      
-      - name: Checkout private tools
-        uses: actions/checkout@v2
-        with:
-          repository: squidfunk/mkdocs-material-insiders
-          token: ${{ secrets.GH_TOKEN_MKDOCS }}
-          path: mkdocs-material-insider
         
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
@@ -37,7 +30,7 @@ jobs:
           sudo apt-get install -y libcairo2-dev libfreetype6-dev libffi-dev libjpeg-dev libpng-dev libz-dev
           python3 -m pip install -U pip
           python3 -m pip install -r requirements.txt
-          python3 -m pip install -e mkdocs-material-insider
+          python3 -m pip install git+https://${GH_TOKEN_MKDOCS}@github.com/squidfunk/mkdocs-material-insiders.git
 
       - name: Deploy 🚀
         run: python3 -m mkdocs gh-deploy --force --remote-branch gh-pages-develop
