--- a/.github/workflows/gh-deploy.yml
+++ b/.github/workflows/gh-deploy.yml
@@ -12,7 +12,14 @@ jobs:
         python-version: [ 3.11 ]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
+      - name: Checkout private tools
+        uses: actions/checkout@v3
+        with:
+          repository: squidfunk/mkdocs-material-insiders
+          token: ${{ secrets.GH_TOKEN_MKDOCS }}
+          path: mkdocs-material-insider
 
       - name: Some check on branch
         id: branch_check
@@ -42,7 +49,7 @@ jobs:
           sudo apt-get install -y libcairo2-dev libfreetype6-dev libffi-dev libjpeg-dev libpng-dev libz-dev
           python3 -m pip install -U pip
           python3 -m pip install -r requirements.txt
-          python3 -m pip install git+https://endersonmenezes:${GH_TOKEN_MKDOCS}@github.com/squidfunk/mkdocs-material-insiders.git
+          python3 -m pip install -e mkdocs-material-insider
 
       - name: Deploy 🚀
         run: python3 -m mkdocs gh-deploy --force --remote-branch ${{ steps.branch_check.outputs.env_name }}
