feat: create Amanda as author

--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -17,3 +17,8 @@ artumosgoc:
   name: Elias Miranda
   description: Student
   avatar: https://avatars.githubusercontent.com/u/63540372
+
+amandatambara:
+  name: Amanda Tambara
+  description: Volunteer
+  avatar: https://amandatambara.com/wp-content/uploads/2023/04/cropped-cropped-foto-amanda-tambara-22.png
