--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,8 +75,8 @@ markdown_extensions:
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
   - pymdownx.highlight:
       anchor_linenums: true
   - pymdownx.inlinehilite
@@ -96,7 +96,7 @@ plugins:
   # - git-authors
   - blog:
       blog_dir: blog
-      posts_dir: "{blog}/posts"
+      post_dir: "{blog}/posts"
       post_url_date_format: YYYY/MM/dd
       post_slugify: !!python/object/apply:pymdownx.slugs.slugify
         kwds:
