update to generate files html

--- a/.github/workflows/gh-deploy.yml
+++ b/.github/workflows/gh-deploy.yml
@@ -61,18 +61,25 @@ jobs:
 
       - name: Deploy Colabs from google-colab directory 🚀
         run: |
+          # Go to google-colab directory and install claat
           cd google-colab
           go install github.com/googlecodelabs/tools/claat@latest
           export GOPATH="$HOME/go"
           PATH="$GOPATH/bin:$PATH"
+
+          # For each .md file, export it to html
           files=$(find . -name "*.md")
           for file in $files; do
             claat export $file
           done
           cd ..
+
           # Checkout on branch gh-pages-* depending on branch
           git checkout ${{ steps.branch_check.outputs.env_name }}
+
           # See actual branch
           echo "Running on branch $(git rev-parse --abbrev-ref HEAD)"
-          # git add google-colab
-          # git commit -m "Update google-colab paths"
+
+          # Git add folder google-colab excluding .md files
+          git add google-colab -f --all -- ':!*.md'
+          git commit -m "Update google-colab paths"
