atualizações no site

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,22 +13,13 @@ nav:
       - Associação: ong.md
       - Linha do Tempo: timeline.md
       - Pais e Responsáveis: pais_responsaveis.md
-      - Projetos: projetos.md
       - Código de Conduta: conduta.md
     - Mentorias: quero/mentoria.md
     - Participe: #
       - "#QueroEstudar": quero/estudar.md
       - "#QueroApoiar": quero/apoiar.md
       - "#QueroMentoria": quero/mentoria.md
-    - Trilhas: #
-      - "- Trilhas de Conhecimento -":
-        - GitHub Start: trilhas/github-starter.md
-        - Python: trilhas/python.md
-      - "- Trilhas em Desenvolvimento -":
-        - Javascript: trilhas/javascript.md
-        - CSS3: trilhas/css3.md
-        - HTML5: trilhas/html5.md
-        - "Produtos Digitais": trilhas/produtos-digitais.md
+    - Trilhas: trilhas.md
     - Blog:
       - blog/index.md
     - Contato: contact.md
