--- a/.github/workflows/gh-deploy.yml
+++ b/.github/workflows/gh-deploy.yml
@@ -54,25 +54,25 @@ jobs:
       - name: Deploy mkdocs 🚀
         run: python3 -m mkdocs gh-deploy --force --remote-branch ${{ steps.branch_check.outputs.env_name }}
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: '>=1.18.0'
+      # - name: Set up Go
+      #   uses: actions/setup-go@v4
+      #   with:
+      #     go-version: '>=1.18.0'
 
-      - name: Deploy Colabs from google-colab directory 🚀
-        run: |
-          # Create a claat files
-          bash .github/workflows/scripts/claat.sh
+      # - name: Deploy Colabs from google-colab directory 🚀
+      #   run: |
+      #     # Create a claat files
+      #     bash .github/workflows/scripts/claat.sh
 
-          # Checkout on branch gh-pages-* depending on branch
-          git checkout ${{ steps.branch_check.outputs.env_name }}
+      #     # Checkout on branch gh-pages-* depending on branch
+      #     git checkout ${{ steps.branch_check.outputs.env_name }}
 
-          # See actual branch
-          echo "Running on branch $(git rev-parse --abbrev-ref HEAD)"
+      #     # See actual branch
+      #     echo "Running on branch $(git rev-parse --abbrev-ref HEAD)"
 
-          # Git add folder google-colab excluding .md files
-          git config --global user.name 'Codaqui Bot'
-          git config --global user.email 'contato@codaqui.dev'
-          git add google-colab -f --all -- ':!*.md'
-          git commit -m "Update google-colab paths"
-          git push --set-upstream origin ${{ steps.branch_check.outputs.env_name }}
+      #     # Git add folder google-colab excluding .md files
+      #     git config --global user.name 'Codaqui Bot'
+      #     git config --global user.email 'contato@codaqui.dev'
+      #     git add google-colab -f --all -- ':!*.md'
+      #     git commit -m "Update google-colab paths"
+      #     git push --set-upstream origin ${{ steps.branch_check.outputs.env_name }}
