refactor: Remove unnecessary whitespace and comments in Python code

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -103,6 +103,11 @@ markdown_extensions:
   - pymdownx.snippets
   - pymdownx.superfences
   - pymdownx.details
+  - pymdownx.critic
+  - pymdownx.caret
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.tilde
   - pymdownx.tabbed:
       alternate_style: true 
   - footnotes
