--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 
-custom: ['https://apoia.se/codaqui']
+custom: ['https://opencollective.com/codaqui']
